fix spacing again

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,6 +110,7 @@ figcaption {
 .divided::after {
   content: "";
   @include divider;
+  margin-bottom: 1rem;
 }
 
 .home {
